Works with JSON file but still learning how it works, made simple animations, cleaned up the UI.

--- a/index.html
+++ b/index.html
@@ -12,84 +12,25 @@
     <nav></nav>
     <main>
       <div class="main-game-container">
-        <div class="inventory"></div>
+        <div class="inventory">
+          <h3 id="inventory-title" class="title">Inventory</h3>
+        </div>
         <div class="choices-container">
           <div class="main-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet,
-            enim tempore excepturi explicabo aperiam dolore fuga optio eius
-            quisquam libero eum magnam? Ducimus pariatur asperiores ipsa. Iste,
-            distinctio fugit. Quasi? Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Fugit veniam ipsam cum nesciunt! Obcaecati
-            mollitia voluptatem similique. Quo quod, voluptatum omnis ipsa
-            placeat, nobis, ab amet laboriosam deleniti rerum officia. Lorem
-            ipsum dolor sit amet consectetur adipisicing elit. Debitis ipsa
-            maxime distinctio temporibus, veritatis nulla itaque cum, quos natus
-            eum accusantium architecto quia velit, laborum nobis? Vitae, modi
-            iusto? Quia?Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Eveniet, enim tempore excepturi explicabo aperiam dolore fuga optio
-            eius quisquam libero eum magnam? Ducimus pariatur asperiores ipsa.
-            Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Eveniet, enim tempore excepturi explicabo aperiam dolore fuga
-            optio eius quisquam libero eum magnam? Ducimus pariatur asperiores
-            ipsa. Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Eveniet, enim tempore excepturi explicabo aperiam dolore fuga
-            optio eius quisquam libero eum magnam? Ducimus pariatur asperiores
-            ipsa. Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Eveniet, enim tempore excepturi explicabo aperiam dolore fuga
-            optio eius quisquam libero eum magnam? Ducimus pariatur asperiores
-            ipsa. Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia?Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Eveniet, enim tempore excepturi explicabo aperiam dolore fuga
-            optio eius quisquam libero eum magnam? Ducimus pariatur asperiores
-            ipsa. Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia? Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Eveniet, enim tempore excepturi explicabo aperiam dolore fuga
-            optio eius quisquam libero eum magnam? Ducimus pariatur asperiores
-            ipsa. Iste, distinctio fugit. Quasi? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Fugit veniam ipsam cum nesciunt!
-            Obcaecati mollitia voluptatem similique. Quo quod, voluptatum omnis
-            ipsa placeat, nobis, ab amet laboriosam deleniti rerum officia.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
-            ipsa maxime distinctio temporibus, veritatis nulla itaque cum, quos
-            natus eum accusantium architecto quia velit, laborum nobis? Vitae,
-            modi iusto? Quia?
+            <h3 id="main-text-title" class="title" title">Main Text</h3>
+            <p id="main-text"></p>
           </div>
-          <div class="choices"></div>
+          <div class="choices">
+            <h3 id="choices-title" class="title">Choose</h3>
+            <button id="choice1" class="choice-button"></button>
+            <button id="choice2" class="choice-button"></button>
+            <button id="choice3" class="choice-button"></button>
+            <button id="choice4" class="choice-button"></button>
+          </div>
         </div>
-        <div class="character"></div>
+        <div class="character">
+          <h3 id="character-title" class="title">Character Sheet</h3>
+        </div>
       </div>
     </main>
     <footer></footer>
