Added character portraits.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         </div>
         <div class="character">
           <h3 id="character-title" class="title">Character Sheet</h3>
+          <div class="character-container">
+          <img id="portrait" src="img/Male Portrait.png" alt="Male Portrait">
+        </div>
         </div>
       </div>
     </main>
