Created overlay to store player's name, Fixed the buttons issue they now appear with the number of choices available, learning how to replace the player name

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   <body>
     <nav></nav>
     <main>
+
+      <div id="overlay" class="overlay">
+
+        <div class="input-container">
+
+          <label for="name">Please enter your name:</label>
+          <input type="text" id="name" placeholder="Your Name">
+          <button id="submit">Submit</button>
+
+        </div>
+
+      </div>
+      
       <div class="main-game-container">
         <div class="inventory">
           <h3 id="inventory-title" class="title">Inventory</h3>
