FINALLYYYYYYY!!!!! fixed the memory leak event listener issue by adding an event delegator

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <h3 id="main-text-title" class="title" title">Main Text</h3>
             <p id="main-text"></p>
           </div>
-          <div class="choices">
+          <div id="choices">
             <h3 id="choices-title" class="title">Choose</h3>
-            <button id="choice1" class="choice-button"></button>
-            <button id="choice2" class="choice-button"></button>
-            <button id="choice3" class="choice-button"></button>
-            <button id="choice4" class="choice-button"></button>
+            <button id="choice1" class="choice-button" data-choice="0"></button>
+            <button id="choice2" class="choice-button" data-choice="1"></button>
+            <button id="choice3" class="choice-button" data-choice="2"></button>
+            <button id="choice4" class="choice-button" data-choice="3"></button>
           </div>
         </div>
         <div class="character">
